--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 # General site configuration
 #==============================
 
+name: Tim Chiang
 title: Tim Chiang's GitHub Page
 email: timolawl@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
