--- a/.htaccess
+++ b/.htaccess
@@ -21,9 +21,9 @@ pache Server Configs v2.14.0 | MIT License
 # http://enable-cors.org/
 # http://www.w3.org/TR/cors/
 
-# <IfModule mod_headers.c>
-#     Header set Access-Control-Allow-Origin "*"
-# </IfModule>
+ <IfModule mod_headers.c>
+     Header set Access-Control-Allow-Origin "*"
+ </IfModule>
 
 # ----------------------------------------------------------------------
 # | Cross-origin images                                                |
