--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
-pache Server Configs v2.14.0 | MIT License
+# Apache Server Configs v2.14.0 | MIT License
 # https://github.com/h5bp/server-configs-apache
 
 # (!) Using `.htaccess` files slows down Apache, therefore, if you have
