--- a/.htaccess
+++ b/.htaccess
@@ -211,8 +211,8 @@ Options -MultiViews
 
   # Web fonts
 
-    AddType application/font-woff                       woff
-    AddType application/font-woff2                      woff2
+    AddType application/x-font-woff                     woff
+    AddType application/x-font-woff2                    woff2
     AddType application/vnd.ms-fontobject               eot
 
     # Browsers usually ignore the font media types and simply sniff
@@ -223,7 +223,7 @@ Options -MultiViews
     # in the console if the following font types are served with any
     # other media types.
 
-    AddType application/x-font-ttf                      ttc ttf
+    AddType application/font-ttf                        ttc ttf
     AddType font/opentype                               otf
 
 
