--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ email: timolawl@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
     Tim Chiang's GitHub page. Timolawl is wordplay on timolol, a non-selective beta-blocker.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "timolawl.github.io" # the base hostname & protocol for your site
+url: https://timolawl.github.io # the base hostname & protocol for your site
 twitter_username:
 github_username:  Timolawl
 
