--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,9 @@ description: > # this means to ignore newlines until "baseurl:"
     Tim Chiang's GitHub page. Timolawl is wordplay on timolol, a non-selective beta-blocker.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: https://timolawl.github.io # the base hostname & protocol for your site
-twitter_username:
-github_username:  Timolawl
+enforce_ssl: timolawl.github.io
+twitter_username: timolawl
+github_username:  timolawl
 
 # Permalink style
 permalink: pretty
