--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: https://timolawl.github.io # the base hostname & protocol for your site
 enforce_ssl: timolawl.github.io
-twitter_username: timolawl
+twitter_username: tim_chiang
 github_username:  timolawl
 
 # Permalink style
